<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:background="@color/white"
              >
    <TextView
        android:id="@id/dialogFirstLine"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:textColor="@color/near_main_orange_color"
        android:text="@string/dialog_takephoto"
        android:gravity="center"
        android:textSize="17sp"
        android:background="@drawable/common_view_btn_bg"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/common_divide_color"/>
    <TextView
        android:id="@id/dialogSecondLine"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/dialog_gallery"
        android:textColor="@color/eighty_percent_black"
        android:gravity="center"
        android:textSize="17sp"
        android:background="@drawable/common_view_btn_bg"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/common_divide_color"/>
    <TextView
        android:id="@id/dialogThirdLine"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/cancel"
        android:textColor="@color/fifty_percent_black"
        android:gravity="center"
        android:textSize="15sp"
        android:background="@drawable/common_view_btn_bg"
        />

</LinearLayout>