<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvShowEnv"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:paddingLeft="15dp"
        android:text="当前环境为:"
        android:textColor="@color/eighty_percent_black"/>
    <Button
        android:id="@+id/btTest"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/test_environment"
        android:textSize="20sp"
        android:background="@drawable/phone_login_btn_bg"/>

    <Button
        android:id="@+id/btDev"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/dev_environment"
        android:textSize="20sp"
        android:background="@drawable/phone_login_btn_bg"/>

    <Button
        android:id="@+id/btOffical"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/finish_environment"
        android:textSize="20sp"
        android:background="@drawable/phone_login_btn_bg"/>

</LinearLayout>