<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/fill_profile_bg"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/common_titlebar_height"
        android:text="@string/fill_user_info"
        android:gravity="center_vertical"
        android:layout_marginLeft="20dp"
        android:textSize="18sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/perferctuserinfo_tips"
        android:gravity="center"
        android:layout_marginTop="27dp"
        android:textSize="15sp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="15dp"
        android:background="@drawable/fill_profile_tip_bg"
        />
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        >
        <com.brotherhood.o2o.ui.widget.account.WaveView
            android:id="@+id/viPersonWave"
            android:layout_width="121dp"
            android:layout_height="121dp"/>
        <ImageView
            android:id="@+id/ivPersonHeadPhoto"
            android:layout_width="79dp"
            android:layout_height="79dp"
            android:layout_centerInParent="true"
            android:src="@mipmap/head_photo_default"
            android:scaleType="centerCrop"
            />
    </RelativeLayout>
    <EditText
        android:id="@+id/etPersonNickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:gravity="center"
        android:layout_marginTop="26dp"
        android:layout_marginLeft="@dimen/login_margin_width"
        android:layout_marginRight="@dimen/login_margin_width"
        android:paddingTop="9dp"
        android:paddingBottom="9dp"
        android:textSize="16.87sp"
        android:textCursorDrawable="@drawable/login_edittext_cursor"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp"
        android:background="@android:color/white"
        android:alpha="0.2"
        android:layout_marginLeft="@dimen/login_margin_width"
        android:layout_marginRight="@dimen/login_margin_width"
        />

    <RadioGroup
        android:id="@+id/rgPersonRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="6dp"
        android:gravity="center"
        >
        <RadioButton
            android:id="@+id/rbPersonMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:drawableRight="@drawable/person_male_checkbox_bg"
            android:text="@string/sex_male"
            android:checked="true"
            android:button="@null"
            android:textSize="17sp"
            android:background="@null"
            />
        <RadioButton
            android:id="@+id/rbPersonFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sex_female"
            android:layout_marginLeft="53dp"
            android:button="@null"
            android:drawableRight="@drawable/person_female_checkbox_bg"
            android:drawablePadding="8dp"
            android:textSize="17sp"
            android:background="@null"
            />
    </RadioGroup>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@android:color/white"
        android:alpha="0.2"
        android:layout_marginLeft="@dimen/login_margin_width"
        android:layout_marginRight="@dimen/login_margin_width"
        />

    <TextView
        android:id="@+id/tvPersonFinish"
        android:layout_width="285dp"
        android:layout_height="50dp"
        android:layout_marginTop="55dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/person_finish"
        android:gravity="center"
        android:background="@drawable/login_btn_bg"
        android:textSize="17sp"
        /><!--login_btn_unenable_bg-->
</LinearLayout>
