<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:drawee="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/ivLoginBg"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:src="@mipmap/login_bg_one"
        android:scaleType="fitXY"
        />
    <ImageView
        android:layout_width="101dp"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="92dp"
        android:src="@mipmap/app_logo_near"
        />

    <Button
        android:id="@+id/toOverseas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="海外版"/>
    <LinearLayout
        android:id="@+id/llLoginPrivacy"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:layout_centerHorizontal="true"
            android:text="@string/login_tip"
            android:textSize="11sp"
            />
        <TextView
            android:id="@+id/tvLoginPrivacy"
            android:layout_marginLeft="6dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/login_privacy_policy"
            android:textSize="11sp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_above="@id/llLoginPrivacy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="34dp"
        android:layout_marginRight="34dp"
        android:layout_marginBottom="30dp"
        >
        <LinearLayout
            android:id="@+id/llLoginPhoneBtn"
            android:background="@drawable/phone_login_btn_bg"
            style="@style/LoginBtnStyle"
            >
            <ImageView
                android:layout_width="22dp"
                android:layout_height="18dp"
                android:src="@mipmap/login_phone_logo"
                android:duplicateParentState="true"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:text="@string/login_btn_phone"
                android:textSize="17sp"
                android:duplicateParentState="true"
                android:layout_marginLeft="6dp"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/llLoginWechatBtn"
            android:background="@drawable/wechat_login_btn_bg"
            android:layout_marginLeft="10dp"
            style="@style/LoginBtnStyle">
            <ImageView
                android:layout_width="22dp"
                android:layout_height="18dp"
                android:src="@mipmap/login_wechat_logo"
                android:duplicateParentState="true"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:duplicateParentState="true"
                android:text="@string/login_btn_wechat"
                android:textSize="17sp"
                android:layout_marginLeft="6dp"
                />
        </LinearLayout>

    </LinearLayout>
    <include layout="@layout/phone_login_view"/>
</RelativeLayout>