<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:background="@color/white"
              >
    <TextView
        android:id="@id/dialogFirstLine"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:textColor="@color/fifty_percent_black"
        android:text="@string/dialog_gender_title"
        android:gravity="center"
        android:textSize="15sp"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/common_divide_color"/>
    <LinearLayout
        android:id="@id/dialogSecondLine"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@drawable/common_view_btn_bg"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/sex_male_white"
            android:background="@drawable/sex_male_rect_bg"
            android:scaleType="centerInside"
            android:padding="2dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sex_male"
            android:duplicateParentState="true"
            android:textColor="@color/fifty_percent_black"
            android:gravity="center"
            android:textSize="15sp"
            android:layout_marginLeft="2dp"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/common_divide_color"/>
    <LinearLayout
        android:id="@id/dialogThirdLine"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@drawable/common_view_btn_bg"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/sex_female_white"
            android:background="@drawable/sex_female_rect_bg"
            android:scaleType="centerInside"
            android:padding="2dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sex_female"
            android:duplicateParentState="true"
            android:textColor="@color/near_main_orange_color"
            android:gravity="center"
            android:textSize="15sp"
            android:layout_marginLeft="2dp"
            />
    </LinearLayout>

</LinearLayout>